# pgcache

./: .gitignore  .swp  Cargo.toml  ConstantPropagationPlan.md  EXTENDED-QUERY-PROTOCOL.md  PHASE-0-REFACTORING.md  README.md  ResolvedASTPlan.md  TODO-cache-size-tracking.md  clippy.toml  config.toml  debugfile  pgproto.data
.config/: nextest.toml
ADR/: ADR-001-multi-threaded-architecture.md  ADR-002-resolved-ast.md  ADR-003-constant-propagation.md  ADR-004-tokio-select-connection-multiplexing.md  ADR-005-extended-query-protocol-support.md  ADR-006-search-path-support.md  ADR-007-member-dashboard-architecture.md  ADR-008-origin-tls-support.md  ADR-009-client-tls-support.md  ADR-010-population-worker-pool.md  ADR-011-set-operation-support.md  ADR-012-predicate-pushdown.md  ADR-013-ecostring-identifier-types.md  ADR-014-exists-not-exists-decorrelation.md  ADR-015-scalar-subquery-decorrelation.md  ADR-016-in-any-decorrelation.md  ADR-017-not-in-all-decorrelation.md  ADR-018-dynamic-publication-management.md  ADR-019-anonymous-telemetry.md  ADR-020-table-allowlist.md  ADR-021-observability-admin-api.md  ADR-022-per-query-metrics.md  ADR-023-pinned-queries.md  ADR-024-predicate-subsumption.md  ADR-025-cache-connection-hot-path.md  ADR-026-request-coalescing.md  ADR-027-cdc-local-eval-fast-path.md  ADR-028-dynamic-runtime-configuration.md
benches/: ast_conversion.rs  query_parsing.rs  query_pipeline.rs
docs/: allowlist-tables.md  complex-query-support.md  constraint-based-invalidation.md  correlated-subqueries.md  decorrelate-scalar-subqueries.md  decorrelation-exists.md  direct-source-delete-optimzation.md  dynamic-config.md  dynamic-publication-management.md  extended-query.md  immutable-functions.md  inequality-constraints.md  left-right-join-support.md  materialized-results.md  observability-admin-api.md  or-in-constraints.md  per-query-metrics.md  pinned-queries.md  predicate-pushdown.md  predicate-subsumption.md  query-constraints.md  range-subsumption.md  request-coalescing.md  resolved-ast-deparse-plan.md
src/: cache.rs  catalog.rs  lib.rs  main.rs  metrics.rs  proxy.rs  result.rs  settings.rs  stream_utils.rs  telemetry.rs  timing.rs  tls.rs  tracing_utils.rs
src/cache/: cdc.rs  messages.rs  mod.rs  mv.rs  query.rs  query_cache.rs  runtime.rs  status.rs  subsumption_index.rs  types.rs  worker.rs  write_queue.rs  writer.rs
src/cache/writer/: cdc.rs  core.rs  mod.rs  mv.rs  population.rs  query.rs  table.rs
src/pg/: cache_connection.rs  cdc.rs  connect.rs  mod.rs  protocol.rs
src/pg/protocol/: backend.rs  encode.rs  extended.rs  frontend.rs  mod.rs
src/proxy/: cache_sender.rs  client_stream.rs  connection.rs  mod.rs  query.rs  search_path.rs  server.rs  tls_stream.rs
src/query/: ast.rs  constraints.rs  decorrelate.rs  evaluate.rs  mod.rs  parse.rs  pushdown.rs  resolve.rs  resolved.rs  transform.rs  update.rs
src/query/ast/: convert.rs  expr_parse.rs  mod.rs  types.rs
src/query/transform/: constant_fold.rs  mod.rs  parameters.rs  pushdown.rs  select_node.rs  values.rs
src/query/transform/parameters/: binary.rs  mod.rs  replace.rs  text.rs
tests/: admin_endpoint_test.rs  allowlist_test.rs  argument_test.rs  binary_array_test.rs  cache_constraint_invalidation_test.rs  cache_join_test.rs  cache_test.rs  clock_policy_test.rs  coalescing_test.rs  column_order_test.rs  correlated_subquery_test.rs  cte_test.rs  dynamic_config_test.rs  eviction_test.rs  extended_protocol_test.rs  filter_aggregate_test.rs  generation_tracking_test.rs  immutable_function_test.rs  inequality_test.rs  limit_test.rs  mv_test.rs  outer_join_test.rs  pgproto_test.rs  pinned_query_test.rs  pk_only_table_test.rs  proxy_test.rs  range_subsumption_test.rs  search_path_test.rs  set_operations_test.rs  subquery_test.rs  subsumption_test.rs
tests/data/: default_config.toml
tests/data/certs/: server.crt  server.key
tests/data/pgproto/: bind_reuse_sync.data  jdbc_describe_flush.data  multi_execute.data  named_portal.data  non_cacheable_sync.data  parse_bind_execute_sync.data
tests/util/: assertions.rs  context.rs  http.rs  metrics.rs  mod.rs  pgproto.rs  process.rs
