[package]
name = "pgcache"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pgcache"
path = "src/main.rs"

[lib]
name = "pgcache_lib"
path = "src/lib.rs"
doctest = false

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-stream = "0.1.17"

tokio-postgres = { git = "https://github.com/tempest98/rust-postgres", default-features = false, branch = "compat" }
postgres-protocol = {git = "https://github.com/tempest98/rust-postgres", branch = "compat" }
postgres-replication = { git = "https://github.com/tempest98/rust-postgres", default-features = false, branch = "compat" }
postgres-types = { git = "https://github.com/tempest98/rust-postgres", branch = "compat" }
pgwire = { git = "https://github.com/tempest98/pgwire", features = [
    "client-api",
    "server-api-ring",
] }
pg_query = "6.1.1"

serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
nu-ansi-term = "0.50.3"
phf = { version = "0.13.1", features = ["macros"] }
error_set = "0.9.0"
err_trail = { version = "0.9.0", features = ["tracing"] }
lexopt = "0.3.1"
async-stream = "0.3.6"
iddqd = "0.3.14"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.8"
ordered-float = "5.1.0"
hotpath = { version = "0.4.1", optional = true }
signal-hook = { version = "0.3.18", features = ["iterator"] }
nix = { version = "0.30.1", features = ["fs"] }

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total= ["hotpath/hotpath-alloc-count-total"]
hotpath-off = ["hotpath/hotpath-off"]

[dev-dependencies]
pgtemp = "0.6.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "ast_conversion"
harness = false

[[bench]]
name = "query_parsing"
harness = false
