[package]
name = "pgcache"
version = "0.3.8"
edition = "2024"

[[bin]]
name = "pgcache"
path = "src/main.rs"

[lib]
name = "pgcache_lib"
path = "src/lib.rs"
doctest = false

[lints.clippy]
indexing_slicing = "warn"
fallible_impl_from = "warn"
wildcard_enum_match_arm = "warn"
unneeded_field_pattern = "warn"
fn_params_excessive_bools = "deny"
unwrap_used = "warn"
large_futures = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
str_to_string = "warn"
implicit_clone = "warn"
# unnecessary_wraps = "warn"
# must_use_candidate = "deny"

[profile.profiling]
inherits = "release"
debug = true

[features]
console = ["dep:console-subscriber"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tokio-stream = "0.1.18"

tokio-postgres = { path = "../rust-postgres/tokio-postgres", default-features = false, features = ["runtime"] }
postgres-protocol = { path = "../rust-postgres/postgres-protocol" }
postgres-replication = { path = "../rust-postgres/postgres-replication", default-features = false }
postgres-types = { path = "../rust-postgres/postgres-types" }
# tokio-postgres = { git = "https://github.com/tempest98/rust-postgres", default-features = false, features = ["runtime"], branch = "compat" }
# postgres-protocol = {git = "https://github.com/tempest98/rust-postgres", branch = "compat" }
# postgres-replication = { git = "https://github.com/tempest98/rust-postgres", default-features = false, branch = "compat" }
# postgres-types = { git = "https://github.com/tempest98/rust-postgres", branch = "compat" }
pgwire = { git = "https://github.com/tempest98/pgwire", features = [
    "client-api",
    "server-api-ring",
] }
pg_query = "6.1.1"

# TLS support for origin database connections
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
rustls-pki-types = "1.14.0"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.6"
tokio-rustls = "0.26.4"

serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
nu-ansi-term = "0.50.3"
phf = { version = "0.13.1", features = ["macros"] }
error_set = "0.9.1"
rootcause = "0.12.0"
lexopt = "0.3.1"
async-stream = "0.3.6"
iddqd = "0.3.17"
ecow = "0.2.6"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "1.0.2"
ordered-float = "5.1.0"
hotpath = { version = "0.10.1", optional = true }
console-subscriber = { version = "0.5.0", optional = true }
signal-hook = { version = "0.4.3", features = ["iterator"] }
nix = { version = "0.31.1", features = ["fs", "signal"] }
metrics = "0.24.3"
metrics-util = "0.20.1"
metrics-exporter-prometheus = "0.18.1"

[dev-dependencies]
pgtemp = "0.7.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
regex-lite = "0.1.9"

[[bench]]
name = "query_pipeline"
harness = false
